diagweave/tests/ui/display/display_unmatched_brace.stderr
error: unmatched `}` in #[display(...)] template
 --> tests/ui/display/display_unmatched_brace.rs:5:19
  |
5 |         #[display("broken } template")]
  |                   ^^^^^^^^^^^^^^^^^^^
