diagweave/tests/ui/display/display_unmatched_brace.rs
use diagweave::set;

set! {
    AuthError = {
        #[display("broken } template")]
        InvalidToken,
    }
}

fn main() {}